--- a/src/assets/Content/default/sass/_global.scss
+++ b/src/assets/Content/default/sass/_global.scss
@@ -222,6 +222,7 @@ input[type=reset] {
         color: $color-primary;
         border: 1px solid $color-primary;
         background-color: $color-white;
+        width: 100%;
 
         &:hover {
             color: $color-white;
@@ -229,47 +230,7 @@ input[type=reset] {
             background-color: $color-hover;
         }
     }
-    // &.btn-blue {
-    //     position: relative;
-    //     color: $color-primary;
-    //     border: 1px solid $color-blue;
-    //     background-color: $color-blue;
-
-    //     display: inline-block;
-    //     vertical-align: middle;
-    //     cursor: pointer;
-    //     padding: 0 50px;
-    //     margin: 0 auto;
-    //     // text-align: center;
-    //     font-family: $default-font;
-    //     // color: $color-hover;
-    //     min-width: 100px;
-    //     height: 42px;
-    //     // text-transform: uppercase;
-    //     // background-color: transparent;
-    //     -webkit-transition: all 0.2s ease-in-out;
-    //     -moz-transition: all 0.2s ease-in-out;
-    //     transition: all 0.2s ease-in-out;
-    //     text-decoration: none;
-
-    //     &:hover {
-    //         color: $color-white;
-    //         border: 1px solid $color-hover;
-    //         background-color: $color-hover;
-    //     }
-    // }
-
-    // &.btn-back {
-    //     position: relative;
-    //     color: $color-white;
-    //     border: 1px solid $color-secondary;
-    //     background-color: $color-secondary;
-
-    //     &:hover {
-    //         border: 1px solid $color-hover;
-    //         background-color: $color-hover;
-    //     }
-    // }
+    
 
     &.btn-contact {
         position: relative;
@@ -871,11 +832,11 @@ input[type=reset] {
     }
 
     input[type=radio] + label {
-        background-image: url('../../../Images/icons/ico-rad.png');
+        background-image: url('../../../Images/icons/radio-icon.png');
         background-position: 0 0;
         background-repeat: no-repeat;
-        height: 25px;
-        width: 25px;
+        height: 28px;
+        width: 28px;
         display: block;
         float: left;
         padding: 0;
@@ -885,7 +846,88 @@ input[type=reset] {
     }
 
     input[type=radio]:checked + label {
+        background-image: url('../../../Images/icons/radio-icon-check.png');
+        background-position: 0 0;
+        background-repeat: no-repeat;
+    }
+
+    input[type=radio]:disabled + label + span.content-rdo-inline {
+        color: #f0f0f0;
+    }
+
+    input[type=radio]:checked + label + span.content-rdo-inline {
+        color: $color-text;
+    }
+    // Checkbox
+    input[type=checkbox] {
+        display: none;
+    }
+
+    input[type=checkbox] + label {
+        background-image: url('../../../Images/icons/ico-rad.png');
+        background-position: 0 0;
+        background-repeat: no-repeat;
+        height: 25px;
+        width: 25px;
+        display: block;
+        float: left;
+        padding: 0;
+        margin-right: 10px;
+        cursor: pointer;
+    }
+
+    input[type=checkbox]:checked + label {
         background-image: url('../../../Images/icons/ico-rad-checked.png');
+        background-position: 0 0;
+        background-repeat: no-repeat;
+    }
+
+    input[type=checkbox]:disabled + label + span.content-rdo-inline {
+        color: #f0f0f0;
+    }
+
+    input[type=checkbox]:checked + label + span.content-rdo-inline {
+        color: $color-text;
+    }
+
+    span.content-rdo-inline {
+        padding-left: 0;
+        // font-size: $base-fontsize;
+        line-height: 25px;
+        color: $color-text;
+        display: block;
+        float: left;
+        max-width: 85%;
+        cursor: pointer;
+    }
+}
+
+.custom-radio-between {
+    display: block;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    // Radio
+    input[type=radio] {
+        display: none;
+    }
+
+    input[type=radio] + label {
+        background-image: url('../../../Images/icons/radio-icon2.png');
+        background-position: 0 0;
+        background-repeat: no-repeat;
+        height: 28px;
+        width: 28px;
+        display: block;
+        float: left;
+        padding: 0;
+        margin-right: 10px;
+        // vertical-align: top;
+        cursor: pointer;
+    }
+
+    input[type=radio]:checked + label {
+        background-image: url('../../../Images/icons/radio-icon-check2.png');
         background-position: 0 0;
         background-repeat: no-repeat;
     }
